add_library(B B.cpp)

target_link_libraries(B
        INTERFACE A
        PRIVATE A
)

target_include_directories(B PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

get_target_property(B_INCLUDE_DIRECTORIES B INCLUDE_DIRECTORIES)
get_target_property(B_INTERFACE_INCLUDE_DIRECTORIES B INTERFACE_INCLUDE_DIRECTORIES)
get_target_property(B_LINK_LIBRARIES B  LINK_LIBRARIES)
get_target_property(B_INTERFACE_LINK_LIBRARIES B  INTERFACE_LINK_LIBRARIES)

message(STATUS "B_INCLUDE_DIRECTORIES : ${B_INCLUDE_DIRECTORIES}")
message(STATUS "B_INTERFACE_INCLUDE_DIRECTORIES : ${B_INTERFACE_INCLUDE_DIRECTORIES}")
message(STATUS "B_LINK_LIBRARIES : ${B_LINK_LIBRARIES}")
message(STATUS "B_INTERFACE_LINK_LIBRARIES : ${B_INTERFACE_LINK_LIBRARIES}")