set (LIBRARY_DIR ${LEARN_CPP_SOURCE_DIR}/contrib/poco)
MESSAGE( STATUS "LIBRARY_DIR = ${LIBRARY_DIR}")

add_subdirectory (Crypto)
add_subdirectory (Data)
#add_subdirectory (Data/ODBC)
add_subdirectory (Foundation)
add_subdirectory (JSON)
#add_subdirectory (MongoDB)
add_subdirectory (Net)
add_subdirectory (Net/SSL)
#add_subdirectory (Redis)
add_subdirectory (Util)
add_subdirectory (XML)
