add_executable(quickSort quickSort.cpp)
add_executable(heapSort heapSort.cpp)

add_executable(mergeOrderedList mergeOrderedList.cpp)

# back track
add_executable(nQueue nQueue.cpp)
add_executable(generateParenthesis generateParenthesis.cpp)

# dynamic plan
add_executable(coinChange coinChange.cpp)
add_executable(fib fib.cpp)
add_executable(longestPalindrome longestPalindrome.cpp)

# greedy
add_executable(findPeaks findPeaks.cpp)
add_executable(maxArea maxArea.cpp)
