add_library(A src/A.cpp)

target_include_directories(A PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

get_target_property(A_INCLUDE_DIRECTORIES A INCLUDE_DIRECTORIES)
get_target_property(A_INTERFACE_INCLUDE_DIRECTORIES A  INTERFACE_INCLUDE_DIRECTORIES)
get_target_property(A_LINK_LIBRARIES A  LINK_LIBRARIES)
get_target_property(A_INTERFACE_LINK_LIBRARIES A  INTERFACE_LINK_LIBRARIES)

message(STATUS "A_INCLUDE_DIRECTORIES : ${A_INCLUDE_DIRECTORIES}")
message(STATUS "A_INTERFACE_INCLUDE_DIRECTORIES : ${A_INTERFACE_INCLUDE_DIRECTORIES}")
message(STATUS "A_LINK_LIBRARIES : ${A_LINK_LIBRARIES}")
message(STATUS "A_INTERFACE_LINK_LIBRARIES : ${A_INTERFACE_LINK_LIBRARIES}")